--- a/G/main/templates/main/home.html
+++ b/G/main/templates/main/home.html
@@ -135,7 +135,11 @@
       <a href="#portfolio">Portfolio</a>
       <a href="#contact">Contact</a>
     </div>
-    <button class="logout-btn">Logout</button>
+    
+    <a href="{% url 'loginpage' %}">
+      <button class="logout-btn">Login</button>
+  </a>
+  
   </div>
 
   <!-- Main Content -->
