--- a/G/main/templates/main/base.html
+++ b/G/main/templates/main/base.html
@@ -47,14 +47,14 @@
             padding: 50px;
         }
         .footer {
-            position: absolute;
-            top: 88%;
             text-align: center;
             background: #222;
             color: white;
-            padding-left: 40rem;
-            padding-right: 40rem;
+            padding: 20px;
             font-size: 14px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
         .btn {
             background: #ffcc00;
@@ -67,6 +67,21 @@
         }
         .btn:hover {
             background: #e6b800;
+        }
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .nav-left, .nav-right {
+                flex-direction: column;
+                align-items: center;
+            }
+            .footer {
+                padding: 15px;
+                font-size: 12px;
+            }
         }
     </style>
 </head>
@@ -83,10 +98,17 @@
         </nav>
     </header>
     
-    
+   <main>
 
+    {% block content%}
+
+
+    {% endblock %}
+
+   </main>
+    
     <footer class="footer">
-        <p>&copy; 2025 <br> All rights Rsvd</p>
+        <p>&copy; 2025 All rights reserved.</p>
     </footer>
 </body>
 </html>
