--- a/Main/MyCompany/templates/main/home.html
+++ b/Main/MyCompany/templates/main/home.html
@@ -10,6 +10,15 @@
 <body>
     <header>
         <nav>
+            <a href="https://www.linkedin.com" target="_blank">
+                <img src="https://via.placeholder.com/24" alt="LinkedIn">
+            </a>
+            <a href="https://github.com" target="_blank">
+                <img src="https://via.placeholder.com/24" alt="GitHub">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="https://via.placeholder.com/24" alt="Facebook">
+            </a>
             <div class="logo">CALEB</div>
             <ul>
                 <li><a href="#home">Home</a></li>
