--- a/MayakaOmbogo/MainAuth/templates/MainAuth/registration.html
+++ b/MayakaOmbogo/MainAuth/templates/MainAuth/registration.html
@@ -47,8 +47,10 @@
                 {% endif %}
               </div>
           
-              <!-- Submit Button -->
-              <button type="submit">Sign Up</button>
+                <!-- Submit Button -->
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary">Sign Up</button>
+                </div>
             </form>
           
             <div class="google-signin-container">
